# chdman

./: .gitignore  CMakeLists.txt  COPYING  README.md  chdman_generated_files.txt  command  genie_history.bash  update_tree.bash  update_tree.sh
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-msvc.yml  ci-windows.yml
cmake_subdirs/: CMakeLists.txt
cmake_subdirs/7z/: CMakeLists.txt
cmake_subdirs/expat/: CMakeLists.txt
cmake_subdirs/flac/: CMakeLists.txt
cmake_subdirs/ocore_sdl/: CMakeLists.txt
cmake_subdirs/utf8proc/: CMakeLists.txt
cmake_subdirs/utils/: CMakeLists.txt
cmake_subdirs/zlib/: CMakeLists.txt
make_files/: ocore_sdl.make
src/: version.cpp
src/lib/util/: corestr.cpp
src/osd/modules/lib/: osd_getenv.cpp  osdlib_unix_mod.cpp
src/tools/: runtest.cmd
unused/: build_call_from_project_root.sh  output.txt  sdl_needed_symbols.txt
unused/deprecated_big_cmake/: CMakeLists.txt
unused/make_files/: chdman.make  utils.make
